# mopaq

./: .editorconfig  .gitignore  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  FEATURE_STATUS.md  Makefile  README.md  SECURITY.md  STRUCTURE  TODO.md  deny.toml  quick-start.sh  rust-toolchain.toml  rustfmt.toml  setup_dirs.sh
.github/: WORKFLOWS.md
.github/workflows/: benchmarks.yml  ci.yaml  ci.yml  cross-build.yml  main.yml  pull-request.yml  release.yml  security.yml
benches/: header_benchmark.rs  read_bench.rs
benches/compression/: comparison_bench.rs  pkware_bench.rs
benches/crypto/: encryption_bench.rs  hash_bench.rs
benches/tables/: hash_table_bench.rs  lookup_bench.rs
docs/: bet-het-tables.md  binray-rename-summary.md  cli-colors.md  cli-usage.md  crypt_table.csv  crypto-implementation-summary.md  crypto-implementation.md  debug-info-command.md  implementation-summary.md  mopaq-format.md  mopaq-workflow.md  naming-conventions.md  project-layout.md  random_table.csv  stormlib-debugging.md
examples/: archive_header.rs  extract.rs
mopaq/: Cargo.toml
mopaq/benches/: archive_creation.rs  archive_extraction.rs  builder.rs  compression.rs  crypto.rs  hash.rs
mopaq/examples/: create_archive.rs  create_archive_with_attributes.rs  create_compressed_tables.rs  create_encrypted_archive.rs  create_test_mpq.rs  generate_test_data.rs  test_encryption_compression.rs  test_het_bet_compression.rs  verify_signature.rs
mopaq/src/: archive.rs  builder.rs  crypto.rs  error.rs  hash.rs  header.rs  io.rs  lib.rs  special_files.rs  tables.rs
mopaq/src/compression/: compress.rs  decompress.rs  methods.rs  mod.rs
mopaq/src/compression/algorithms/: bzip2.rs  lzma.rs  mod.rs  pkware.rs  sparse.rs  zlib.rs
mopaq/src/crypto/: mod.rs  signature.rs
mopaq/src/special_files/: mod.rs
mopaq/src/tables/: bet.rs  block.rs  common.rs  hash.rs  het.rs  mod.rs
mopaq/src/test_utils/: data_generator.rs  mod.rs  mpq_builder.rs
mopaq/tests/: attributes.rs  builder.rs  compression.rs  compression_api.rs  compression_edge_cases.rs  compression_sparse.rs  compression_zlib.rs  crypto.rs  hash.rs  hash_crypto_integration.rs  het_bet.rs  lib.rs  tables.rs  test_archive.rs  test_compression.rs  test_security.rs  test_tables.rs  test_v4_creation.rs
mopaq/tests/archive/: attributes.rs  builder.rs  mod.rs
mopaq/tests/common/: mod.rs  test_helpers.rs
mopaq/tests/compliance/stormlib/: stormlib_compatibility.rs
mopaq/tests/component/compression/: bzip2.rs  sparse.rs  zlib.rs
mopaq/tests/component/security/: crc.rs
mopaq/tests/component/tables/: hash_block.rs
mopaq/tests/compression/: api.rs  edge_cases.rs  mod.rs  round_trip.rs
mopaq/tests/compression/algorithms/: adpcm.rs  bzip2.rs  mod.rs  sparse.rs  zlib.rs
mopaq/tests/integration/: mod.rs
mopaq/tests/integration/archive/: attributes.rs  basic.rs
mopaq/tests/integration/compression/: api.rs
mopaq/tests/scenarios/real_world/: compression_format.rs  het_bet_creation.rs  v4_comprehensive.rs
mopaq/tests/scenarios/round_trip/: tests.rs
mopaq/tests/scenarios/stress/: edge_cases.rs
mopaq/tests/security/: crc.rs  crc_generation.rs  crypto.rs  hash.rs  mod.rs  signature.rs
mopaq/tests/tables/: het_bet.rs  mod.rs
scripts/: README.md  create_comprehensive_test_mpqs.py  create_compressed_test_mpq.py  create_crc_test_mpq.py  create_test_archive_with_attributes.py  create_test_archives.py  create_test_mpq.py  generate_test_data.py  mpq_tools.py  test_cli_name.py  test_crypto_performance.sh  test_debug_hash_command.sh  test_encryption_table.py  test_info_command.sh  verify_build.py
src/: archive.rs  block_table.rs  config.rs  error.rs  file.rs  hash_table.rs  header.rs  lib.rs  listfile.rs  patch.rs  user_header.rs  utils.rs
src/compression/: adpcm.rs  bzip2.rs  huffman.rs  lzma.rs  mod.rs  multi.rs  pkware.rs  sparse.rs  wave.rs  zlib.rs
src/crypto/: constants.rs  encryption.rs  hash.rs  key_derivation.rs  mod.rs
src/tables/: attributes.rs  bet_table.rs  block_table.rs  ext_table.rs  hash_table.rs  het_table.rs  lookup.rs  mod.rs
storm/: Cargo.toml
storm-cli/: COMMAND_STRUCTURE.md  Cargo.toml  README.md
storm-cli/scripts/: Install-Completions.ps1  install-completions.sh
storm-cli/src/: config.rs  main.rs  output.rs
storm-cli/src/commands/: archive.rs  create.rs  crypto.rs  debug.rs  extract.rs  file.rs  find.rs  hash.rs  list.rs  mod.rs  table.rs  verify.rs
storm-cli/tests/: cli.rs  completion.rs  create.rs  find.rs  hash.rs
storm-ffi/: Cargo.toml  README.md  build.rs
storm-ffi/examples/: basic.c  storm_example.c
storm-ffi/include/: StormLib.h
storm-ffi/src/: lib.rs
storm/benches/: hash.rs
storm/src/: crypto.rs  error.rs  hash.rs  io.rs  lib.rs
storm/src/compression/: mod.rs
storm/tests/: basic.rs
supply-chain/: config.toml
test-data/: .gitignore  README.md  README.mde
tests/: integration.rs  stormlib_compat.rs
tests/compression/: multi_tests.rs  pkware_tests.rs
tests/crypto/: encryption_tests.rs  hash_tests.rs
tests/tables/: block_table_tests.rs  hash_table_tests.rs  lookup_tests.rs
