[package]
name = "mopaq"
version = "0.1.0"
authors = ["Daniel S. Reichenbach <daniel@kogito.network>"]
edition = "2024"
rust-version = "1.86"
description = "MoPaQ implementation in Rust"
homepage = "https://wowemulation.dev"
repository = "https://github.com/danielsreichenbach/mopaq"
license = "MIT OR Apache-2.0"
keywords = ["archive", "compression", "mpq"]

[dependencies]
byteorder = "1.5"
memmap2 = "0.9"
thiserror = "2.0"
flate2 = { version = "1.0", optional = true }
bzip2 = { version = "0.5", optional = true }
xz2 = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[features]
default = ["zlib"]
zlib = ["dep:flate2"]
bzip2 = ["dep:bzip2"]
lzma = ["dep:xz2"]
all-compression = ["zlib", "bzip2", "lzma"]

[badges]
maintenance = { status = "actively-developed" }
