[package]
name = "mopaq"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mopaq"
keywords.workspace = true
categories.workspace = true
description = "A high-performance, safe Rust implementation of the MPQ (Mo'PaQ) archive format"
readme = "../README.md"

[dependencies]
# Error handling
thiserror = { workspace = true }

# Data structures and utilities
bytes = { workspace = true }
byteorder = { workspace = true }
bitflags = { workspace = true }
tempfile = { workspace = true }

# Hashing and cryptography
sha1 = { workspace = true }
md-5 = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
crc32fast = { workspace = true }

# Compression algorithms
flate2 = { workspace = true }
bzip2 = { workspace = true }
rust-lzma = { workspace = true }

# I/O and performance
memmap2 = { workspace = true, optional = true }
parking_lot = { workspace = true }

# Serialization (for debug features)
serde = { workspace = true, optional = true }

# Async support (optional)
tokio = { version = "1.42", features = ["rt", "io-util"], optional = true }

# Logging
log = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
pretty_assertions = { workspace = true }
env_logger = { workspace = true }

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "crypto"
harness = false

[[bench]]
name = "compression"
harness = false

[features]
default = ["mmap", "all-compressions"]
mmap = ["memmap2"]
async = ["tokio"]
serde = ["dep:serde", "bytes/serde"]
all-compressions = ["compression-bzip2", "compression-lzma"]
compression-bzip2 = []
compression-lzma = []

# Enable all features for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
